--- a/style.css
+++ b/style.css
@@ -15,7 +15,9 @@ body {
   margin: auto;
 }
 
-h1 {
+#caption {
+  font-size: 30px;
+  font-weight: bold;
   text-align: center;
   margin-bottom: 30px;
 }
